Updated after adding the page "SignIn"

--- a/Project/Sources/qodlyApp.json
+++ b/Project/Sources/qodlyApp.json
@@ -1,5 +1,5 @@
 {
-	"webforms.renderer.indexPage": "HomePage",
+	"webforms.renderer.indexPage": "PageLoader",
 	"webforms.display-mode": "airy",
 	"webforms.i18n": {
 		"supported": [],
